syntax = "proto3";

option csharp_namespace = "MainService.Communicators";

package anket;

service Anket {
	rpc CreateAnket(CreateAnketRequest) returns (CreateAnketReply);
	rpc GetAnket(GetAnketRequest) returns (GetAnketReply);
}
message CreateAnketRequest{
	repeated AnketPart anket =1;
}
message AnketPart{
	string parentId=1;
	string text=2;
	string type=3;
	repeated string questionVariants=4;
}
message GetAnketRequest{
}
message GetAnketReply{
	repeated AnketPart anket =1;
}
message CreateAnketReply{
	string result=1;
}